syntax = "proto3";

import "buf/validate/validate.proto";
import "core.proto";

package plato;

option go_package = "plato/api/proto";

message PaginateRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  optional int32 limit = 2;
  optional int32 offset = 3;
  optional string keyword = 4;
}

message SlugRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  string slug = 2;
}

message TopicModeRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 topic_id = 2;
  int32 mode_id = 3;
}

message ModeIdRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 mode_id = 2;
}

message TopicIdRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 topic_id = 2;
}

message DailyGameIdRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 daily_game_id = 2;
}

message AnswerIdRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 answer_id = 2;
}

message AnswerCategoryIdRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 answer_category_id = 2;
}
